data/all_generated_tests/raw_wast_tests/br_table_IncorrectConditionEvaluation_2287.wast
;; 7. **Test Description:** Develop a `br_table` with a varied operand stack sequence preceding the instruction. Mix operand types and validate if the conditions for branching explicitly match or cause unexpected traps. The focus is on nuanced stack configurations for condition validation checks.

(assert_invalid
 (module
  (func
   (block (result i32)
    (i32.const 0) (f64.const 1.0) (i32.const 2)
    (br_table 0 (i32.const 1))
   )
  )
 )
 "type mismatch"
)